Fix horizontal scrollbar bug

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -17,9 +17,10 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
+  left: 0;
   position: absolute;
+  right: 0;
   top: 0;
-  width: 100vw;
   z-index: -1;
 }
 
